test: attempt 2 to pass workflow